Finally fixed skills spacing

--- a/src/index.css
+++ b/src/index.css
@@ -14,14 +14,13 @@ body {
 .card {
   background-color: black;
   color: white;
+
 }
 
 h5 {
   font-weight: bold;
 }
 
-image {
-  width: 100%;
-  height: 15vw;
-  object-fit: cover;
+#skills {
+  width: 50%;
 }
